LOG of the CHANGES in the package GenomicTools.fileHandler

-----------------------------------------------------

Version with odd last numbers are development versions.
Stable releases have even version numbers:

-----------------------------------------------------
Version 0.1.5.x:
1: importFA does not rely on alternating rows anymore
2: importSTARLog imports now more statistics and is able to import recursively several log files
3: plotTotalReads function added
4: summary.STARLog function added
5: plotUniquelyReads function added and also added to the summary function
6: importSTARLog handles now STAR2.7.2b log files (at the moment ONLY final.log)
7: crucial bugfix in variant coding for importVCF
8: print.gtf function added
9: importGTF: Bugfix in case the features are substring from each other
10: importFA: Minor comfort fix to make the function run with smoother output. Further, verbose option added
11: importVCF: Phased input accepted for "/" coding (it is transformed in non-phased notation)
12: importVCF: Info fields are now printed as well

Version 0.1.4 (Stable Version):
* Improvements of summary functions
* Minor bugfixes

Version 0.1.2 (Stable Version):
* Initial commit with most import I/O functions added
Planned next features
* importVCF should also support gz files located on a remote server, so far only local support (importVCF)

Version 0.1.1 (Developer Version):
* Initial package development